# rempc

./: .gitignore  CMakeLists.txt  README.md  build_qpmpclti2f.m  matrixopsc.h  multisolver.h  pdipmqp2.m  qpmpclti2e.m  qpmpclti2f.c  remake-user.sh  rempc-basic.c  setup.py  test-mpc-afti16-slack.ipynb  test-octave-headless.sh  test.py  test_mpc_afti16_2f_soft.m  test_mpc_masses_2e_2f.m  test_mpc_tripleint_2e2f_features.m  vectorops.h
testsrc/: mcheck.c  mcheck.py  mt19937ar.h  niqcheck.c  niqcheck.py  textio.h
